# bindle-file

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  Makefile  README.md  SPEC.md  bindle.h  build.rs  cbindgen.toml
bench/: bench.py
c/: Makefile  bindle-cli.c  bindle.c  compile_flags.txt  test.py
include/: bindle.h
src/: bindle.rs  compress.rs  entry.rs  ffi.rs  lib.rs  reader.rs  writer.rs
test/: Makefile  test.c
