[package]
name = "bindle-file"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "bindle"
required-features = ["cli"]


[dependencies]
crc32fast = "1.5.0"
memmap2 = "0.9.9"
zerocopy = { version = "0.8.38", features = ["std", "derive"] }
zstd = "0.13.3"
clap = { version = "4.5", features = ["derive"], optional = true }

[features]
default = ["cli"]
cli = ["clap"]

[build-dependencies]
cbindgen = "0.29"
